# 516-Digital-Investigation-Tools

./: .gitignore  516-investigator.sh  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  __init__.py  pyproject.toml  requirements.txt  setup.py
config/: __init__.py  default_config.json  social_platforms.json  user_agents.json
docs/: __init__.py  api_reference.md  examples.md  installation.md  usage.md
examples/: __init__.py  advanced_scan.py  basic_usage.py
examples/sample_data/: create_sample_image.py  sample_output.json
outputs/: .gitkeep
scripts/: __init__.py  domain_research.py  email_analyzer.py  enhanced_instaloader.py  image_forensics.py  metadata_analyzer.py  report_generator.py  sherlock_wrapper.py  social_media_mapper.py
tests/: __init__.py  test_helpers.py  test_integration.py
utils/: __init__.py  config_loader.py  export_utils.py  helpers.py  logger.py
